добавлены тултипы к инпутам даты и адреса

--- a/index.html
+++ b/index.html
@@ -243,10 +243,11 @@
             <div class="delivery__inputs-container">
               <div class="delivery__input-group">
                 <label class="delivery__label" for="date">Дата</label>
-                <span>
+                <span class="tooltip">
                   <button class=" button button--tooltip" type="button">
                     <img src="img/tooltip-icon.svg" alt="Кнопка дополнительной информации">
                   </button>
+                  <span class="tooltip__message">Укажите желаемую дату доставки</span>
                   <span class="visually-hidden">Дополнительная информация</span>
                 </span>
                 <input class="form__input delivery__input delivery__input--date" type="text" name="date" id="date" placeholder="01.04.2020">
@@ -257,10 +258,11 @@
               </div>
               <div class="delivery__input-group">
                 <label class="delivery__label" for="address">Адрес</label>
-                <span>
+                <span class="tooltip">
                   <button class="button button--tooltip" type="button">
                     <img src="img/tooltip-icon.svg" alt="Кнопка дополнительной информации">
                   </button>
+                  <span class="tooltip__message">Введите название улицы, дома и квартиры</span>
                   <span class="visually-hidden">Дополнительная информация</span>
                 </span>
                 <input class="form__input delivery__input delivery__input--address" type="text" name="address" id="address" placeholder="ул. Большая Конюшенная, 19/8">
