Добавлено dropdown-menu и попап для поиска по сайту

--- a/catalog.html
+++ b/catalog.html
@@ -345,7 +345,7 @@
           </li>
         </ul>
         <div class="pagination">
-          <button class="button button--primary pagination__button--show-more" type="button">Показать еще</button>
+          <button class="button button--primary pagination__button pagination__button--show-more" type="button">Показать еще</button>
           <div class="pagination-container">
             <button class="pagination__button-arrow" type="button" disabled>
               <svg class="pagination__button-arrow-icon" xmlns="http://www.w3.org/2000/svg" width="17" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M9.71 13.14a.67.67 0 0 0 .94-.95L6.45 8l4.2-4.2a.66.66 0 0 0-.94-.94L5.04 7.52a.66.66 0 0 0 0 .94l4.67 4.68Z"/></svg>
@@ -379,7 +379,7 @@
   </main>
   <footer class="footer">
     <div class="footer__wrapper">
-      <ul class="footer__social-list social-list">
+      <ul class="footer__social-list social social-list">
         <li class="footer__social-item social-item">
           <a class="social__link" href="https://t.me/htmlacademy" target="_blank">
             <span class="social__underlay"></span>
