--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <svg class="navigation__link-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M2.66 7.33a4.67 4.67 0 1 1 9.34 0 4.67 4.67 0 0 1-9.34 0Zm8.42 4.69a6 6 0 1 1 .94-.94l2.45 2.45a.67.67 0 1 1-.94.94l-2.45-2.45Z"/></svg>
                 <span class="visually-hidden">Поиск</span>
               </a>
-              <div class="popup popup__search popup__search--hidden">
+              <div class="popup popup--search popup--hidden">
                 <form class="form" action="https://echo.htmlacademy.ru/" method="post">
                   <input class="form__input popup__input" type="text" name="search" placeholder="Поиск по сайту">
                   <button class="popup__clear-button popup__clear-button--hidden" type="reset">
@@ -74,6 +74,60 @@
                 <span class="visually-hidden">Корзина</span>
                 <span>2 товара</span>
               </a>
+              <div class="popup cart popup--hidden">
+                <h2 class="popup__title">Корзина</h2>
+                <ul class="cart__list">
+                  <li class="cart__item">
+                    <img class="cart__image" src="img/cart-raspberry.png" width="46" height="46" alt="Малинка.">
+                    <h3 class="cart__title">Малинка</h3>
+                    <p class="cart__cost-container">
+                      <span class="cart__weight-info">
+                        <output class="cart__weight">1</output> кг
+                      </span> х
+                      <span class="cart__cost-info">
+                        <output class="cart__cost">310</output> ₽
+                      </span>
+                    </p>
+                    <span class="cart__price-container">
+                      <output class="cart__price">310</output> ₽
+                    </span>
+                    <button class="cart__delete-item-button" type="button">
+                      <svg class="cart__delete-item-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M12.8 4.14a.67.67 0 1 0-.94-.94L8 7.06 4.14 3.2a.67.67 0 1 0-.94.94L7.06 8 3.2 11.86a.67.67 0 1 0 .94.94L8 8.94l3.86 3.86a.67.67 0 1 0 .94-.94L8.94 8l3.86-3.86Z"/></svg>
+                      <span class="visually-hidden">Удалить из корзины</span>
+                    </button>
+                  </li>
+                  <li class="cart__item">
+                    <img class="cart__image" src="img/cart-bubble-gum.png" width="46" height="46" alt="Бабл-гам.">
+                    <h3 class="cart__title">Бабл-гам</h3>
+                    <p class="cart__cost-container">
+                      <span class="cart__weight-info">
+                        <output class="cart__weight">1,5</output> кг
+                      </span> х
+                      <span class="cart__cost-info">
+                        <output class="cart__cost">320</output> ₽
+                      </span>
+                    </p>
+                    <span class="cart__price-container">
+                      <output class="cart__price">480</output> ₽
+                    </span>
+                    <button class="cart__delete-item-button" type="button">
+                      <svg class="cart__delete-item-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M12.8 4.14a.67.67 0 1 0-.94-.94L8 7.06 4.14 3.2a.67.67 0 1 0-.94.94L7.06 8 3.2 11.86a.67.67 0 1 0 .94.94L8 8.94l3.86 3.86a.67.67 0 1 0 .94-.94L8.94 8l3.86-3.86Z"/></svg>
+                      <span class="visually-hidden">Удалить из корзины</span>
+                    </button>
+                  </li>
+                </ul>
+                <div class="cart__summary-container">
+                  <button class="button button--extra" type="submit">Оформить заказ</button>
+                  <p class="cart__total-value-container">
+                    <span class="cart__total-price">Итого:
+                      <output class="cart__total-value">790</output> ₽
+                    </span>
+                  </p>
+                </div>
+              </div>
+              <div class="popup cart cart--empty popup--hidden">
+                <h2 class="popup__title popup__title--empty-cart">Ваша корзина пока пуста</h2>
+              </div>
             </li>
           </ul>
         </nav>
@@ -360,5 +414,19 @@
         </div>
       </div>
     </footer>
+
+    <script>
+      const navItems = document.querySelectorAll(".navigation__item");
+
+      navItems.forEach (navItem => {
+        const navLink = navItem.querySelector(".navigation__link");
+        const popup = navItem.querySelector(".popup");
+
+        navLink.addEventListener("click", function () {
+          navLink.classList.toggle("popup--opened");
+          popup.classList.toggle("popup--hidden");
+        });
+      });
+    </script>
   </body>
 </html>
