--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="icon" href="favicon-32.ico">
     <title>HTML Academy: {{projectTitle}}</title>
   </head>
   <body>
@@ -50,7 +51,7 @@
           <ul class="navigation__list navigation-user__list">
             <li class="navigation__item navigation-user__item">
               <a class="navigation__link navigation-user__link navigation__link--search" href="#">
-                <svg class="navigation__link-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M2.66 7.33a4.67 4.67 0 1 1 9.34 0 4.67 4.67 0 0 1-9.34 0Zm8.42 4.69a6 6 0 1 1 .94-.94l2.45 2.45a.67.67 0 1 1-.94.94l-2.45-2.45Z"/></svg>
+                <svg class="navigation__link-icon navigation__link-icon--search" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M2.66 7.33a4.67 4.67 0 1 1 9.34 0 4.67 4.67 0 0 1-9.34 0Zm8.42 4.69a6 6 0 1 1 .94-.94l2.45 2.45a.67.67 0 1 1-.94.94l-2.45-2.45Z"/></svg>
                 <span class="visually-hidden">Поиск</span>
               </a>
               <div class="popup popup--search popup--hidden">
@@ -69,10 +70,10 @@
               </a>
               <div class="popup popup--login popup--hidden">
                 <h2 class="popup__title">Личный кабинет</h2>
-                <form class="form popup--login-form" action="https://echo.htmlacademy.ru/" method="post">
+                <form class="form popup__form" action="https://echo.htmlacademy.ru/" method="post">
                   <input class="form__input popup__input popup__input--login" type="email" name="email" placeholder="email@example.com">
                   <input class="form__input popup__input popup__input--password" type="password" name="password">
-                  <button class="button button--extra popup--login-button" type="submit">Войти</button>
+                  <button class="button button--extra popup__form-button" type="submit">Войти</button>
                   <a class="popup__link popup__link--restore-password" href="#">Забыли пароль?</a>
                   <a class="popup__link popup__link--register" href="#">Регистрация</a>
                 </form>
@@ -82,8 +83,8 @@
               <a class="navigation__link navigation-user__link navigation-user__link--cart" href="#">
                 <svg class="navigation__link-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="17" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 2.1a.67.67 0 0 0 0 1.34h1.77l.47 2.34v.05l.97 4.83a1.83 1.83 0 0 0 1.82 1.47h5.62a1.83 1.83 0 0 0 1.82-1.47l.93-4.86a.67.67 0 0 0-.66-.8h-9.3l-.47-2.36a.67.67 0 0 0-.66-.53H1.17Zm4.52 8.3-.81-4.06h8.23l-.78 4.07a.5.5 0 0 1-.49.39H6.18a.5.5 0 0 1-.49-.4Zm-1.13 3.96a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z"/></svg>
                 <span class="visually-hidden">Корзина</span>
-                <span>2 товара</span>
-                <span class="navigation__link--hidden-text">Нет товаров</span>
+                <span class="navigation__text">2 товара</span>
+                <span class="navigation__text navigation__text--hidden">Нет товаров</span>
               </a>
               <div class="popup cart popup--hidden">
                 <h2 class="popup__title">Корзина</h2>
@@ -369,7 +370,7 @@
             <p class="contacts__text">Для заказов по телефону:</p>
             <a href="tel:+78128121212" class="contacts__phone">+7 (812) 812-12-12</a>
             <p class="contacts__extra-info">(с 10 до 20 ежедневно)</p>
-            <a href="#" class="button button--extra button--link">Форма обратной связи</a>
+            <a href="#" class="button button--extra button--link button--feedback">Форма обратной связи</a>
           </div>
         </section>
       </div>
@@ -426,6 +427,22 @@
       </div>
     </footer>
 
+    <div class="modal modal--closed">
+      <div class="modal__content">
+        <button class="modal__close-button" type="button">
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M15.89 5.05a.67.67 0 0 0-.95-.94L10 9.06 5.05 4.1a.67.67 0 1 0-.94.94L9.06 10 4.1 14.94a.67.67 0 1 0 .94.95L10 10.94l4.94 4.95a.67.67 0 1 0 .95-.95L10.94 10l4.95-4.95Z" fill="#2D3440"/></svg>
+          <span class="visually-hidden">Закрыть окно.</span>
+        </button>
+        <h2 class="modal__title">Мы обязательно ответим вам!</h2>
+        <form class="modal__form form" action="https://echo.htmlacademy.ru/" method="post">
+          <input class="form__input modal__input" name="name" type="text" placeholder="Имя и фамилия">
+          <input class="form__input modal__input" type="email" name="email" placeholder="email@example.com">
+          <textarea class="form__input modal__input" name="textarea" cols="30" rows="6" placeholder="В свободной форме"></textarea>
+          <button class="button button--extra modal__button" type="submit">Отправить</button>
+        </form>
+      </div>
+    </div>
+
     <script>
       const navItems = document.querySelectorAll(".navigation__item");
 
@@ -437,6 +454,18 @@
           navLink.classList.toggle("popup--opened");
           popup.classList.toggle("popup--hidden");
         });
+      });
+
+      const buttonFeedback = document.querySelector(".button--feedback");
+      const modal = document.querySelector(".modal");
+      const modalClose = modal.querySelector(".modal__close-button");
+
+      buttonFeedback.addEventListener("click", function (evt) {
+        evt.preventDefault;
+        modal.classList.remove("modal--closed");
+      });
+      modalClose.addEventListener("click", function () {
+        modal.classList.add("modal--closed");
       });
     </script>
   </body>
