Добавлены ссылки в карточки товара каталога

--- a/catalog.html
+++ b/catalog.html
@@ -184,9 +184,15 @@
         <h2 class="visually-hidden">Попробуйте вкусы нашего мороженого.</h2>
         <ul class="goods__list">
           <li class="goods__item">
-            <img class="goods__image" src="img/goods-raspberry-ice-cream.svg" alt="Сливочное мороженое с малиновым джемом." width="168" height="168">
-            <h3 class="goods__item-title">Малинка</h3>
-            <p class="goods__item-description">Сливочное мороженое с малиновым джемом</p>
+            <a class="goods__link-image" href="#">
+              <img class="goods__image" src="img/goods-raspberry-ice-cream.svg" alt="Сливочное мороженое с малиновым джемом." width="168" height="168">
+            </a>
+            <h3 class="goods__item-title">
+              <a class="goods__link-title" href="#">Малинка</a>
+            </h3>
+            <p class="goods__item-description">
+              <a class="goods__link-description" href="#">Сливочное мороженое с малиновым джемом</a>
+            </p>
             <p class="goods__price-container">
               <span class="goods__price">310</span>
               <span class="goods__price-type">₽/кг</span>
@@ -196,9 +202,15 @@
             </button>
           </li>
           <li class="goods__item">
-            <img class="goods__image" src="img/goods-pistachio-ice-cream.png" alt="Фисташковый пломбир с кусочками шоколада." width="168" height="168">
-            <h3 class="goods__item-title">Фисташка</h3>
-            <p class="goods__item-description">Фисташковый пломбир с кусочками шоколада</p>
+            <a class="goods__link-image" href="#">
+              <img class="goods__image" src="img/goods-pistachio-ice-cream.png" alt="Фисташковый пломбир с кусочками шоколада." width="168" height="168">
+            </a>
+            <h3 class="goods__item-title">
+              <a class="goods__link-title" href="#">Фисташка</a>
+            </h3>
+            <p class="goods__item-description">
+              <a class="goods__link-description" href="#">Фисташковый пломбир с кусочками шоколада</a>
+            </p>
             <p class="goods__price-container">
               <span class="goods__price">340</span>
               <span class="goods__price-type">₽/кг</span>
@@ -208,11 +220,16 @@
             </button>
           </li>
           <li class="goods__item">
-            <img class="goods__image" src="img/goods-blueberry-ice-cream.png" alt="Крем-брюле
-            с черничным джемом." width="168" height="168">
-            <h3 class="goods__item-title">Черника</h3>
-            <p class="goods__item-description">Крем-брюле <br>
-              с черничным джемом</p>
+            <a class="goods__link-image" href="#">
+              <img class="goods__image" src="img/goods-blueberry-ice-cream.png" alt="Крем-брюле
+              с черничным джемом." width="168" height="168">
+            </a>
+            <h3 class="goods__item-title">
+              <a class="goods__link-title" href="#">Черника</a>
+            </h3>
+            <p class="goods__item-description">
+              <a class="goods__link-description" href="#">Крем-брюле <br>
+              с черничным джемом</a></p>
               <p class="goods__price-container">
                 <span class="goods__price">330</span>
                 <span class="goods__price-type">₽/кг</span>
@@ -222,11 +239,17 @@
             </button>
           </li>
           <li class="goods__item">
-            <img class="goods__image" src="img/goods-bubble-gum-ice-cream.png" alt="Ванильный пломбир
-            со сладкой посыпкой." width="168" height="168">
-            <h3 class="goods__item-title">Бабл-гам</h3>
-            <p class="goods__item-description">Ванильный пломбир <br>
-              со сладкой посыпкой</p>
+            <a class="goods__link-image" href="#">
+              <img class="goods__image" src="img/goods-bubble-gum-ice-cream.png" alt="Ванильный пломбир
+              со сладкой посыпкой." width="168" height="168">
+            </a>
+            <h3 class="goods__item-title">
+              <a class="goods__link-title" href="#">Бабл-гам</a>
+            </h3>
+            <p class="goods__item-description">
+              <a class="goods__link-description" href="#">Ванильный пломбир <br>
+              со сладкой посыпкой</a>
+            </p>
             <p class="goods__price-container">
               <span class="goods__price">320</span>
               <span class="goods__price-type">₽/кг</span>
@@ -236,9 +259,15 @@
             </button>
           </li>
           <li class="goods__item">
-            <img class="goods__image" src="img/goods-blackberry-ice-cream.png" alt="Сливочное мороженое с ежевичным джемом." width="168" height="168">
-            <h3 class="goods__item-title">Ежевика</h3>
-            <p class="goods__item-description">Сливочное мороженое с ежевичным джемом</p>
+            <a class="goods__link-image" href="#">
+              <img class="goods__image" src="img/goods-blackberry-ice-cream.png" alt="Сливочное мороженое с ежевичным джемом." width="168" height="168">
+            </a>
+            <h3 class="goods__item-title">
+              <a class="goods__link-title" href="#">Ежевика</a>
+            </h3>
+            <p class="goods__item-description">
+              <a class="goods__link-description" href="#">Сливочное мороженое с ежевичным джемом</a>
+            </p>
             <p class="goods__price-container">
               <span class="goods__price">330</span>
               <span class="goods__price-type">₽/кг</span>
@@ -248,9 +277,15 @@
             </button>
           </li>
           <li class="goods__item">
-            <img class="goods__image" src="img/goods-banana-ice-cream.png" alt="Сливочный пломбир с банановым вкусом." width="168" height="168">
-            <h3 class="goods__item-title">Банан</h3>
-            <p class="goods__item-description">Сливочный пломбир <br> с банановым вкусом</p>
+            <a class="goods__link-image" href="#">
+              <img class="goods__image" src="img/goods-banana-ice-cream.png" alt="Сливочный пломбир с банановым вкусом." width="168" height="168">
+            </a>
+            <h3 class="goods__item-title">
+              <a class="goods__link-title" href="#">Банан</a>
+            </h3>
+            <p class="goods__item-description">
+              <a class="goods__link-description" href="#">Сливочный пломбир <br> с банановым вкусом</a>
+            </p>
             <p class="goods__price-container">
               <span class="goods__price">340</span>
               <span class="goods__price-type">₽/кг</span>
@@ -260,9 +295,15 @@
             </button>
           </li>
           <li class="goods__item">
-            <img class="goods__image" src="img/goods-chocolate-ice-cream.png" alt="Классический шоколадный пломбир." width="168" height="168">
-            <h3 class="goods__item-title">Шоколадка</h3>
-            <p class="goods__item-description">Классический шоколадный пломбир</p>
+            <a class="goods__link-image" href="#">
+              <img class="goods__image" src="img/goods-chocolate-ice-cream.png" alt="Классический шоколадный пломбир." width="168" height="168">
+            </a>
+            <h3 class="goods__item-title">
+              <a class="goods__link-title" href="#">Шоколадка</a>
+            </h3>
+            <p class="goods__item-description">
+              <a class="goods__link-description" href="#">Классический шоколадный пломбир</a>
+            </p>
             <p class="goods__price-container">
               <span class="goods__price">270</span>
               <span class="goods__price-type">₽/кг</span>
@@ -272,9 +313,15 @@
             </button>
           </li>
           <li class="goods__item">
-            <img class="goods__image" src="img/goods-strawberry-ice-cream.png" alt="Сливочный пломбир с клубничным вкусом." width="168" height="168">
-            <h3 class="goods__item-title">Клубничка</h3>
-            <p class="goods__item-description">Сливочный пломбир <br> с клубничным вкусом</p>
+            <a class="goods__link-image" href="#">
+              <img class="goods__image" src="img/goods-strawberry-ice-cream.png" alt="Сливочный пломбир с клубничным вкусом." width="168" height="168">
+            </a>
+            <h3 class="goods__item-title">
+              <a class="goods__link-title" href="#">Клубничка</a>
+            </h3>
+            <p class="goods__item-description">
+              <a class="goods__link-description" href="#">Сливочный пломбир <br> с клубничным вкусом</a>
+            </p>
             <p class="goods__price-container">
               <span class="goods__price">300</span>
               <span class="goods__price-type">₽/кг</span>
@@ -284,9 +331,14 @@
             </button>
           </li>
           <li class="goods__item">
-            <img class="goods__image" src="img/goods-lemon-ice-cream.png" alt="Освежающий лимонный сорбет." width="168" height="168">
-            <h3 class="goods__item-title">Лимон</h3>
-            <p class="goods__item-description">Освежающий лимонный сорбет</p>
+            <a class="goods__link-image" href="#">
+              <img class="goods__image" src="img/goods-lemon-ice-cream.png" alt="Освежающий лимонный сорбет." width="168" height="168">
+            </a>
+            <h3 class="goods__item-title">
+              <a class="goods__link-title" href="#">Лимон</a>
+            </h3>
+            <p class="goods__item-description">
+              <a class="goods__link-description" href="#">Освежающий лимонный сорбет</a></p>
             <p class="goods__price-container">
               <span class="goods__price">310</span>
               <span class="goods__price-type">₽/кг</span>
@@ -296,9 +348,15 @@
             </button>
           </li>
           <li class="goods__item">
-            <img class="goods__image" src="img/goods-menthol-ice-cream.png" alt="Сливочный пломбир с ментоловым сиропом." width="168" height="168">
-            <h3 class="goods__item-title">Ментол</h3>
-            <p class="goods__item-description">Сливочный пломбир <br> с ментоловым сиропом</p>
+            <a class="goods__link-image" href="#">
+              <img class="goods__image" src="img/goods-menthol-ice-cream.png" alt="Сливочный пломбир с ментоловым сиропом." width="168" height="168">
+            </a>
+            <h3 class="goods__item-title">
+              <a class="goods__link-title" href="#">Ментол</a>
+            </h3>
+            <p class="goods__item-description">
+              <a class="goods__link-description" href="#">Сливочный пломбир <br> с ментоловым сиропом</a>
+            </p>
             <p class="goods__price-container">
               <span class="goods__price">320</span>
               <span class="goods__price-type">₽/кг</span>
@@ -308,9 +366,15 @@
             </button>
           </li>
           <li class="goods__item">
-            <img class="goods__image" src="img/goods-nut-ice-cream.png" alt="Фисташковый пломбир с шоколадным сиропом." width="168" height="168">
-            <h3 class="goods__item-title">Орешек</h3>
-            <p class="goods__item-description">Фисташковый пломбир с шоколадным сиропом</p>
+            <a class="goods__link-image" href="#">
+              <img class="goods__image" src="img/goods-nut-ice-cream.png" alt="Фисташковый пломбир с шоколадным сиропом." width="168" height="168">
+            </a>
+            <h3 class="goods__item-title">
+              <a class="goods__link-title" href="#">Орешек</a>
+            </h3>
+            <p class="goods__item-description">
+              <a class="goods__link-description" href="#">Фисташковый пломбир с шоколадным сиропом</a>
+            </p>
             <p class="goods__price-container">
               <span class="goods__price">360</span>
               <span class="goods__price-type">₽/кг</span>
@@ -320,9 +384,15 @@
             </button>
           </li>
           <li class="goods__item">
-            <img class="goods__image" src="img/goods-creme-caramel-ice-cream.png" alt="Классическое крем-брюле." width="168" height="168">
-            <h3 class="goods__item-title">Крем-брюле</h3>
-            <p class="goods__item-description">Классическое <br> крем-брюле</p>
+            <a class="goods__link-image" href="#">
+              <img class="goods__image" src="img/goods-creme-caramel-ice-cream.png" alt="Классическое крем-брюле." width="168" height="168">
+            </a>
+            <h3 class="goods__item-title">
+              <a class="goods__link-title" href="#">Крем-брюле</a>
+            </h3>
+            <p class="goods__item-description">
+              <a class="goods__link-description" href="#">Классическое <br> крем-брюле</a>
+            </p>
             <p class="goods__price-container">
               <span class="goods__price">280</span>
               <span class="goods__price-type">₽/кг</span>
